Cleanup pass for directories and make system.
- Move strategy source files to src/plugins/strategies.
- Move layer source files to src/plugins/layers.
- Improve handling of libharmony.a dependency in make system.
- Improve handling of standard variables in make system.

--- a/example/code_generation/Makefile
+++ b/example/code_generation/Makefile
@@ -5,27 +5,29 @@ CFLAGS=-std=c99 -pedantic -Wall -Werror -g
 CPPFLAGS=-D_ISOC99_SOURCE -D_XOPEN_SOURCE=500
 
 override CPPFLAGS+=-I$(TO_BASE)/src
-override LDFLAGS+=-L$(TO_BASE)/src -lharmony -ldl
+override LDFLAGS+=-L$(TO_BASE)/src
+override LDLIBS+=-lharmony -ldl
 
-.PHONY: all install clean distclean
+.PHONY: all install libharmony clean distclean
 
 all: gemm
 
 install: gemm
 	@echo "Examples must be executed from source directory (for now)."
 
-gemm: gemm.c $(TO_BASE)/src/libharmony.a
-	@if [ -x "`which $(MPICC) 2>&1`" ]; then                           \
-		echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@"; \
-		$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@;        \
-	else                                                               \
-		echo "Skipping build of $@: $(MPICC) not found.";          \
+gemm: gemm.c libharmony
+	@if [ -x "`which $(MPICC) 2>&1`" ]; then                              \
+	  echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) $(LDLIBS) -o $@";\
+	  $(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) $(LDLIBS) -o $@;       \
+	else                                                                  \
+	  echo "Skipping build of $@: $(MPICC) not found.";                   \
 	fi
 
-$(TO_BASE)/src/libharmony.a:
+libharmony:
 	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
 clean:
 	rm -f core gemm
 
 distclean: clean
+	rm -f *~
