--- a/example/constraint/Makefile
+++ b/example/constraint/Makefile
@@ -3,18 +3,20 @@ TO_BASE=../..
 TEST_DIR=$(TO_BASE)/example/client_api
 TEST_BIN=example_c
 
-.PHONY: all install test clean distclean
+.PHONY: all install test client clean distclean
 
-all:
-	$(MAKE) -C $(TEST_DIR) $(TEST_BIN)
+all: client
 
 install: all
 	@echo "Examples must be executed from source directory (for now)."
 
-test: all
+test: client
 	$(TEST_DIR)/$(TEST_BIN) \
 		SESSION_LAYER_LIST=constraint.so \
 		CONSTRAINT_FILE=constraint.in
+
+client:
+	$(MAKE) -C $(TEST_DIR) $(TEST_BIN)
 
 clean:
 
