Add several new features to example/synth.
- Convert to a full-fledged Harmony application.
- Add ability to change underlying function.
- Add ability to change function input accuracy.
- Add ability to change function output quantization.
- Add ability to randomly perturb function output.
- Add documentation for all new features.

--- a/example/synth/Makefile
+++ b/example/synth/Makefile
@@ -1,19 +1,43 @@
+TO_BASE=../..
+
 CC=gcc
 CFLAGS=-std=c99 -pedantic -Wall -Werror -g
 CPPFLAGS=-D_ISOC99_SOURCE -D_XOPEN_SOURCE=500
 
-.PHONY: all install clean distclean
+SRCS=	synth.c \
+	testfunc.c
+OBJS=	$(SRCS:.c=.o)
 
-all: synth
+TARGETS=synth
 
-install: synth
+override CPPFLAGS+=-I$(TO_BASE)/src
+override LDFLAGS+=-L$(TO_BASE)/src
+override LDLIBS+=-lharmony -lm
+
+.PHONY: all install libharmony clean distclean
+
+all: $(TARGETS)
+
+install: all
 	@echo "Examples must be executed from source directory (for now)."
 
-synth: synth.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) $^ $(LDFLAGS) $(LDLIBS) -o $@
+synth: $(OBJS)
+	$(MAKE) -C $(TO_BASE)/src libharmony.a
+	$(CC) $(LDFLAGS) $(CFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 clean:
-	rm -f *.o synth gmon.out tuna*.log *.tuna.dat
+	rm -f $(TARGETS) $(OBJS)
 
 distclean: clean
-	rm -f *~
+	rm -f *.d *~
+
+#
+# Auto dependency creation
+#
+%.d: %.c
+	@rm -f $@; \
+		$(CC) -MM $(CPPFLAGS) $< > $@.$$$$ 2>/dev/null; \
+		sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
+		rm -f $@.$$$$
+
+-include $(SRCS:.c=.d)
