--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,8 @@ LIB_SRCS=hclient.c
 BIN_SRCS=hserver.c \
          httpsvr.c \
          session-core.c \
-         tuna.c
+         tuna.c \
+         hadm.c
 SRCS=$(SHR_SRCS) $(LIB_SRCS) $(BIN_SRCS)
 
 SHR_OBJS=$(SHR_SRCS:.c=.o)
@@ -39,7 +40,8 @@ HTTP_FILES=http/overview.cgi \
            http/excanvas.min.js
 
 BIN_TARGETS=hserver \
-            tuna
+            tuna \
+            hadm
 LIB_TARGETS=libharmony.a
 LIBEXEC_TARGETS=session-core
 TARGETS=$(BIN_TARGETS) $(LIB_TARGETS) $(LIBEXEC_TARGETS)
@@ -92,6 +94,10 @@ hserver: httpsvr.o $(SHR_OBJS)
 session-core: override LDFLAGS+=-Wl,--export-dynamic
 session-core: override LDLIBS+=-ldl
 session-core: $(SHR_OBJS)
+
+hadm: override LDFLAGS+=-Wl,--export-dynamic
+hadm: override LDLIBS+=-ldl
+hadm: $(SHR_OBJS)
 
 tuna.o: override CFLAGS+=-D_BSD_SOURCE
 tuna: libharmony.a
