--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ BIN_SRCS=hserver.c \
          httpsvr.c \
          session-core.c \
          tuna.c \
-         hadm.c
+         hinfo.c
 SRCS=$(SHR_SRCS) $(LIB_SRCS) $(BIN_SRCS)
 
 SHR_OBJS=$(SHR_SRCS:.c=.o)
@@ -41,7 +41,7 @@ HTTP_FILES=http/overview.cgi \
 
 BIN_TARGETS=hserver \
             tuna \
-            hadm
+            hinfo
 LIB_TARGETS=libharmony.a
 LIBEXEC_TARGETS=session-core
 TARGETS=$(BIN_TARGETS) $(LIB_TARGETS) $(LIBEXEC_TARGETS)
@@ -95,9 +95,9 @@ session-core: override LDFLAGS+=-Wl,--export-dynamic
 session-core: override LDLIBS+=-ldl
 session-core: $(SHR_OBJS)
 
-hadm: override LDFLAGS+=-Wl,--export-dynamic
-hadm: override LDLIBS+=-ldl
-hadm: $(SHR_OBJS)
+hinfo: override LDFLAGS+=-Wl,--export-dynamic
+hinfo: override LDLIBS+=-ldl
+hinfo: $(SHR_OBJS)
 
 tuna.o: override CFLAGS+=-D_BSD_SOURCE
 tuna: libharmony.a
