Introduce hperf_t to handle multiple objectives.
The hperf_t encapsulates a vector of performance values.  This commit
replaces every scalar performance variables with a corresponding
variable of type hperf_t.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ CPPFLAGS=-D_ISOC99_SOURCE -D_XOPEN_SOURCE=500
 SHR_SRCS=hcfg.c \
          hmesg.c \
          hpoint.c \
+         hperf.c \
          hsession.c \
          hsignature.c \
          hsockutil.c \
