Introduce the NEMO search strategy.
The Non-Evolutionary Multi-Objective (NEMO) search strategy provides
an iterative algorithm for optimization problems with more than one
objective.  It is guided by two user inputs: relative objective
importance and a vector of leeway percentages.

Leeway specifies how far an objective may stray from its observed
optimal value before being penalized.

--- a/src/plugins/strategies/Makefile
+++ b/src/plugins/strategies/Makefile
@@ -15,13 +15,17 @@ LIBEXEC_SRCS=libvertex.c \
              exhaustive.c \
              random.c \
              nm.c \
-             pro.c
+             pro.c \
+             nemo.c
+
 SRCS=$(LIBEXEC_SRCS)
 
 LIBEXEC_TARGETS=exhaustive.so \
                 random.so \
                 nm.so \
-                pro.so
+                pro.so \
+                nemo.so
+
 TARGETS=$(LIBEXEC_TARGETS)
 
 .PHONY: all install clean distclean
@@ -49,6 +53,9 @@ nm.so: libvertex.o
 
 pro.so: override LDLIBS+=-lm
 pro.so: libvertex.o
+
+nemo.so: override LDLIBS+=-lm
+nemo.so: libvertex.o
 
 %.so: %.o
 	$(CC) -shared $(LDFLAGS) $(CFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
