Introduce the httpinfo plugin layer.
Reports session configuration information needed by the HTTP server.
This is the first step in eliminating a known HTTP server race
condition.

Currently, the HTTP server retrieves session information directly by
sending and receiving messages with a session process.  However, there
is no guarantee that the received message is a response to the
original message sent.

--- a/src/plugins/layers/Makefile
+++ b/src/plugins/layers/Makefile
@@ -15,6 +15,7 @@ SRCS=agg.c \
      codegen-helper.c \
      constraint.c \
      group.c \
+     httpinfo.c \
      log.c \
      TAUdb.c \
      xmlWriter.c
@@ -25,6 +26,7 @@ LIBEXEC_TARGETS=agg.so \
                 codegen-helper \
                 constraint.so \
                 group.so \
+                httpinfo.so \
                 log.so
 TARGETS=$(LIBEXEC_TARGETS)
 
