--- a/example/client_api/Makefile
+++ b/example/client_api/Makefile
@@ -14,11 +14,7 @@ override LDLIBS+=-lharmony -lm
 
 TARGETS=example_c #example_f example_chpl
 
-.PHONY: all install libharmony clean distclean
-
-all: $(TARGETS)
-
-install: $(TARGETS)
+install:
 	@echo "Examples must be executed from source directory (for now)."
 
 example_c: example.c libharmony
@@ -48,8 +44,5 @@ example_chpl: example.chpl libharmony
 libharmony:
 	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
-clean:
-	rm -f core $(TARGETS)
-
-distclean: clean
-	rm -f *~
+# Active Harmony makefiles should always include this file last.
+include $(TO_BASE)/Makefile.common
