--- a/example/code_generation/Makefile
+++ b/example/code_generation/Makefile
@@ -7,11 +7,11 @@ override CPPFLAGS+=-I$(TO_BASE)/src
 override LDFLAGS+=-L$(TO_BASE)/src
 override LDLIBS+=-lharmony -ldl
 
-.PHONY: all install libharmony clean distclean
+TARGETS=gemm
 
-all: gemm
+.PHONY: libharmony
 
-install: gemm
+install:
 	@echo "Examples must be executed from source directory (for now)."
 
 gemm: gemm.c libharmony
@@ -25,8 +25,5 @@ gemm: gemm.c libharmony
 libharmony:
 	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
-clean:
-	rm -f core gemm
-
-distclean: clean
-	rm -f *~
+# Active Harmony makefiles should always include this file last.
+include $(TO_BASE)/Makefile.common
