--- a/example/constraint/Makefile
+++ b/example/constraint/Makefile
@@ -3,11 +3,11 @@ TO_BASE=../..
 TEST_DIR=$(TO_BASE)/example/client_api
 TEST_BIN=example_c
 
-.PHONY: all install test client clean distclean
+.PHONY: test client
 
 all: client
 
-install: all
+install:
 	@echo "Examples must be executed from source directory (for now)."
 
 test: client
@@ -16,7 +16,5 @@ test: client
 client:
 	$(MAKE) -C $(TEST_DIR) $(TEST_BIN)
 
-clean:
-
-distclean: clean
-	rm -f *~
+# Active Harmony makefiles should always include this file last.
+include $(TO_BASE)/Makefile.common
