--- a/example/synth/Makefile
+++ b/example/synth/Makefile
@@ -13,30 +13,14 @@ override CPPFLAGS+=-I$(TO_BASE)/src
 override LDFLAGS+=-L$(TO_BASE)/src
 override LDLIBS+=-lharmony -lm
 
-.PHONY: all install libharmony clean distclean
+.PHONY: libharmony
 
-all: $(TARGETS)
-
-install: all
+install:
 	@echo "Examples must be executed from source directory (for now)."
 
 synth: $(OBJS)
 	$(MAKE) -C $(TO_BASE)/src libharmony.a
 	$(CC) $(LDFLAGS) $(CFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
-clean:
-	rm -f $(TARGETS) $(OBJS)
-
-distclean: clean
-	rm -f *.d *~
-
-#
-# Auto dependency creation
-#
-%.d: %.c
-	@rm -f $@; \
-		$(CC) -MM $(CPPFLAGS) $< > $@.$$$$ 2>/dev/null; \
-		sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
-		rm -f $@.$$$$
-
--include $(SRCS:.c=.d)
+# Active Harmony makefiles should always include this file last.
+include $(TO_BASE)/Makefile.common
