--- a/example/xml/Makefile
+++ b/example/xml/Makefile
@@ -1,5 +1,6 @@
 TO_BASE=../..
 
+EXTRA_CLEANUP=*.xml
 CC=gcc
 MPICC=mpicc
 CFLAGS=-std=c99 -pedantic -Wall -Werror -g
@@ -10,11 +11,9 @@ override LDLIBS+=-lharmony
 
 TARGETS=example example_mpi
 
-.PHONY: all install libharmony clean distclean
+.PHONY: libharmony
 
-all: $(TARGETS)
-
-install: $(TARGETS)
+install:
 	@echo "Examples must be executed from source directory (for now)."
 
 example: example.c libharmony
@@ -36,8 +35,5 @@ example_mpi: example_mpi.c libharmony
 libharmony:
 	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
-clean:
-	rm -f core $(TARGETS) *.xml
-
-distclean: clean
-	rm -f *~
+# Active Harmony makefiles should always include this file last.
+include $(TO_BASE)/Makefile.common
