--- a/example/code_generation/Makefile
+++ b/example/code_generation/Makefile
@@ -4,26 +4,20 @@ MPICC=mpicc
 CFLAGS=-std=c99 -pedantic -Wall -Werror -g
 
 override CPPFLAGS+=-I$(TO_BASE)/src
-override LDFLAGS+=-L$(TO_BASE)/src
-override LDLIBS+=-lharmony -ldl
+override LDLIBS+=-ldl
 
 TARGETS=gemm
-
-.PHONY: libharmony
 
 install:
 	@echo "Examples must be executed from source directory (for now)."
 
-gemm: gemm.c libharmony
+gemm: gemm.c $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(MPICC) 2>&1`" ]; then                              \
-	  echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) $(LDLIBS) -o $@";\
-	  $(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) $(LDLIBS) -o $@;       \
+	  echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $^ $(LDFLAGS) $(LDLIBS) -o $@";\
+	  $(MPICC) $(CPPFLAGS) $(CFLAGS) $^ $(LDFLAGS) $(LDLIBS) -o $@;       \
 	else                                                                  \
 	  echo "Skipping build of $@: $(MPICC) not found.";                   \
 	fi
-
-libharmony:
-	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
 # Active Harmony makefiles should always include this file last.
 include $(TO_BASE)/Makefile.common
