--- a/example/synth/Makefile
+++ b/example/synth/Makefile
@@ -10,16 +10,12 @@ OBJS=	$(SRCS:.c=.o)
 TARGETS=synth
 
 override CPPFLAGS+=-I$(TO_BASE)/src
-override LDFLAGS+=-L$(TO_BASE)/src
-override LDLIBS+=-lharmony -lm
-
-.PHONY: libharmony
+override LDLIBS+=-lm
 
 install:
 	@echo "Examples must be executed from source directory (for now)."
 
-synth: $(OBJS)
-	$(MAKE) -C $(TO_BASE)/src libharmony.a
+synth: $(OBJS) $(TO_BASE)/src/libharmony.a
 	$(CC) $(LDFLAGS) $(CFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 # Active Harmony makefiles should always include this file last.
