Use Rose compiler for code generation

--- a/code-server/gemm/code.properties
+++ b/code-server/gemm/code.properties
@@ -39,7 +39,7 @@ export PATH LD_LIBRARY_PATH
 appname=gemm
 file_prefix=gemm
 # fortran or c file?
-file_suffix=f
+file_suffix=f90
 ########################################
 
 ###################### are we using a particular CHiLL version
@@ -73,7 +73,7 @@ output_file_suffix=so
 driver_filename=driver.c
 
 # fortran compilation (note the trailing space in the end, which is needed).
-FC_COMMAND="gfortran -m32 -O3 "
+FC_COMMAND="gfortran -O3 "
 
 # c compilation (note the trailing space in the end, which is needed).
-CC_COMMAND="gcc -m32 -O3 "   
+CC_COMMAND="gcc -O3 "   
