--- a/Makefile.common
+++ b/Makefile.common
@@ -8,6 +8,25 @@ endif
 .DEFAULT_GOAL=all
 PREFIX=$(TO_BASE)
 
+ifeq (GCC, $(findstring GCC,$(shell $(CC) --version 2>&1)))
+    override CFLAGS+=-std=c99
+else
+    override CFLAGS+=-c99
+endif
+
+ifeq ($(DEBUG), 1)
+    override CFLAGS+=-g
+    override CXXFLAGS+=-g
+else
+    override CFLAGS+=-O2
+    override CXXFLAGS+=-O2
+endif
+
+ifeq ($(STRICT), 1)
+    override CFLAGS+=-Wpedantic -Wall -Werror
+    override CXXFLAGS+=-Wpedantic -Wall -Werror
+endif
+
 #
 # Standard rules to make available in all subsystems.
 #
