Consolidate install target within Makefile.common.
Per-directory makefiles should use the following convention:
- {BIN|LIB|LIBEXEC|INCLUDE|NO_INST}_TGTS for build targets and destinations.
- {BIN|LIB|LIBEXEC|INCLUDE|NO_INST}_COPY for direct copy destinations.

Additional changes in support of this commit:
- Use GNU convention for staged installs (i.e., DESTDIR).
- Use GNU convention for installation directory variables (e.g., prefix).
- Web server support files installed in libexec/http (vs. libexec/html).

--- a/code-server/Makefile
+++ b/code-server/Makefile
@@ -2,15 +2,8 @@ TO_BASE=..
 
 override CPPFLAGS+=-I$(TO_BASE)/src
 
-BIN_SRCS=code_generator.cxx
-SRCS=$(BIN_SRCS)
-
-BIN_TARGETS=code_generator
-
-TARGETS=$(BIN_TARGETS)
-
-install:
-	@echo "Code server must be executed from source directory (for now)."
+SRCS=code_generator.cxx
+NO_INST_TGTS=code_generator
 
 code_generator: code_generator.o $(TO_BASE)/src/libharmony.a
 	$(CXX) $(LDFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
