--- a/src/plugins/layers/Makefile
+++ b/src/plugins/layers/Makefile
@@ -16,22 +16,21 @@ SRCS=agg.c \
      TAUdb.c \
      xmlWriter.c
 
-LIBEXEC_TARGETS=agg.so \
-                cache.so \
-                codegen.so \
-                codegen-helper \
-                constraint.so \
-                group.so \
-                httpinfo.so \
-                log.so
-TARGETS=$(LIBEXEC_TARGETS)
+LIBEXEC_TGTS=agg.so \
+             cache.so \
+             codegen.so \
+             codegen-helper \
+             constraint.so \
+             group.so \
+             httpinfo.so \
+             log.so
 
 LIBXML2=
 LIBXML2_INCDIR=$(LIBXML2)/include/libxml2
 LIBXML2_LIBDIR=$(LIBXML2)/lib
 
 ifneq (, $(wildcard $(LIBXML2_INCDIR)/libxml/xmlwriter.h))
-	LIBEXEC_TARGETS += xmlWriter.so
+	LIBEXEC_TGTS += xmlWriter.so
 endif
 
 LIBTAUDB=
@@ -39,16 +38,8 @@ LIBTAUDB_INCDIR=$(LIBTAUDB)/include
 LIBTAUDB_LIBDIR=$(LIBTAUDB)/lib
 
 ifneq (, $(wildcard $(LIBTAUDB_LIBDIR)/libtaudb.a))
-	LIBEXEC_TARGETS += TAUdb.so
+	LIBEXEC_TGTS += TAUdb.so
 endif
-
-install:
-	@if [ ! -d $(PREFIX)/libexec ]; then                             \
-		echo mkdir -p $(PREFIX)/libexec;                         \
-		mkdir -p $(PREFIX)/libexec;                              \
-	fi &&                                                            \
-	echo cp $(LIBEXEC_TARGETS) $(LIBEXEC_FILES) $(PREFIX)/libexec && \
-	cp $(LIBEXEC_TARGETS) $(LIBEXEC_FILES) $(PREFIX)/libexec
 
 TAUdb.so: override LDLIBS+=$(LIBTAUDB_LIBDIR)/libtaudb.a
 TAUdb.so: override CPPFLAGS+=-I$(LIBTAUDB_INCDIR)
